<resources>
    <string name="app_name">Lyv Lyv, TjueSyv</string>

    <string name="firebase_url">https://tjuesyv.firebaseio.com</string>

    <string name="hint_nickname">Enter nickname</string>
    <string name="hint_game_code">Enter game code to join</string>
    <string name="hint_answer">Enter answer</string>

    <string name="btn_create_game">Create Game</string>
    <string name="btn_join_game">Join Game</string>
    <string name="btn_start_game">Start Game</string>
    <string name="btn_waiting_on_start">Waiting on Game Host to start game...</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_submit_answer">Submit answer</string>
    <string name="btn_continue_to_choosing">All done?</string>

    <string name="edit_valid_game_codes">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="edit_valid_nickname">abcdefghijklmnopqrstuvwxyzæøå ABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅ0123456789</string>

    <string name="text_lobby_title">Welcome to the lobby!</string>
    <string name="text_game_code">Game Code: "ABCD"</string>
    <string name="text_started">Started</string>
    <string name="text_players_in_lobby">Players in the lobby</string>
    <string name="text_game_has_started">The game has started.</string>
    <string name="text_game_not_started">The game has not started yet.</string>
    <string name="text_player_scores">Player scores</string>
    <string name="text_create_title">Time to get creative</string>
    <string name="text_create_game_master_title">You are the Game Master</string>
    <string name="text_create_title_hint">Good luck!</string>
    <string name="text_create_game_master_title_hint">Wait on other players to answer</string>
    <string name="text_create_question_title">Question:</string>
    <string name="text_enter_answer">Enter your answer here</string>
    <string name="text_insert_question_here">Insert question here</string>
    <string name="text_answered_list">Who has entered an answer?</string>
    <string name="text_choose_master_title">Waiting for others to choose answers.</string>

    <string name="prompt_positive">Yes</string>
    <string name="prompt_negative">No</string>
    <string name="prompt_exit">Really quit?</string>

    <string name="logo_description">logo</string>

    <string name="error_game_not_found">No game found</string>
    <string name="error_game_not_active">Game is not active</string>
    <string name="error_game_in_progress">Game is in progress</string>
    <string name="error_game_is_full">Game is full</string>
    <string name="error_empty_game_code">Please enter a game code</string>
    <string name="error_short_game_code">Game codes are four characters long</string>
    <string name="error_empty_nickname">Please enter a nickname</string>
    <string name="error_taken_nick">Nickname is already taken</string>
    <string name="error_game_is_started">Game is already started</string>
    <string name="error_empty_answer">Please enter an answer</string>

</resources>
